# indirect

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  README.md  TODO.md  beman_indirect-config.cmake.in  vcpkg.json
.github/: CODEOWNERS
.github/workflows/: ci_tests.yml  pre-commit-check.yml  pre-commit-update.yml  vcpkg-release.yml
benchmarks/: BUILD.bazel  CMakeLists.txt  indirect_benchmark.cpp  polymorphic_benchmark.cpp
cmake/: coverage.cmake  features.cmake
compile_checks/: BUILD.bazel  indirect_in_variant.cpp  indirect_pimpl_use.cpp  polymorphic_as_member.cpp  polymorphic_consteval.cpp  polymorphic_pimpl.cpp  polymorphic_pimpl_use.cpp
examples/: CMakeLists.txt  identity_as_default_projection.cpp  identity_direct_usage.cpp  indirect_basic.cpp  polymorphic_basic.cpp  recursive_variant.cpp  todo.cpp
include/beman/indirect/: CMakeLists.txt  identity.hpp  indirect.hpp  indirect_cxx14.hpp  polymorphic.hpp  todo.hpp
include/beman/indirect/detail/: config.hpp.in  synth_three_way.hpp
port/: portfile.cmake.in  vcpkg.json.in
src/beman/indirect/: CMakeLists.txt  beman.indirect-config.cmake.in  identity.cpp  indirect.cpp
tests/beman/indirect/: CMakeLists.txt  identity.test.cpp  indirect.test.cpp  indirect_test.cc  indirect_test.cpp  polymorphic.test.cpp  polymorphic_test.cc  polymorphic_test.cpp  test_helpers.hpp  todo.test.cpp
tests/beman/indirect/compile_checks/: CMakeLists.txt  indirect_as_member.cpp  indirect_consteval.cpp  indirect_pimpl.cpp  indirect_pimpl.hpp  polymorphic_consteval.cpp  polymorphic_in_variant.cpp  polymorphic_pimpl.hpp
